need to figure out ts generation - build runner is making empty files or in wrong location

--- a/example/web/index.html
+++ b/example/web/index.html
@@ -4,31 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flutter VS Code Extension</title>
-  <script>
-    // Bridge for communication with VS Code
-    const vscode = acquireVsCodeApi();
-
-    window.addEventListener('message', event => {
-      const message = event.data;
-      if (message && message.requestId) {
-        // Forward response back to Flutter
-        window.postMessage(message, '*');
+    <script>
+    // Disable history API for webview compatibility
+    (function() {
+      function initializeHistoryAPI() {
+        if (typeof window !== 'undefined' && window.history) {
+          window.history.replaceState = function() {
+            console.log('History replaceState blocked for webview compatibility');
+          };
+          window.history.pushState = function() {
+            console.log('History pushState blocked for webview compatibility');
+          };
+        } else {
+          // Retry after a short delay if window is not available yet
+          setTimeout(initializeHistoryAPI, 10);
+        }
       }
-    });
 
-    // Override postMessage to send to VS Code
-    const originalPostMessage = window.postMessage;
-    window.postMessage = function(message, origin) {
-      if (typeof message === 'object' && message.command) {
-        vscode.postMessage(message);
+      // Initialize immediately or when DOM is ready
+      if (document.readyState === 'loading') {
+        document.addEventListener('DOMContentLoaded', initializeHistoryAPI);
       } else {
-        originalPostMessage.call(window, message, origin);
+        initializeHistoryAPI();
       }
-    };
+    })();
   </script>
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <div id="output"></div>
   <script src="main.dart.js"></script>
 </body>
 </html>
